<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--hier werden die Notizen aufgelistet -->

    <TextView
        android:id="@+id/textViewNotizen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Notizen"
        android:textSize="25dp"
        android:background="#FFF6DC"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textAlignment="center" />
    <ListView
        android:id="@+id/notizenListView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/textViewNotizen"
        android:layout_marginTop="8dp" />

    <ImageButton
        android:id="@+id/notizenloescheButton"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginLeft="365dp"
        android:layout_marginTop="3dp"
        android:backgroundTint="#FFF6DC"
        android:layout_below="@id/TitelAlleListen"
        android:contentDescription="loeschen der ergeignisse"
        app:srcCompat="@drawable/baseline_delete_outline_24" />

    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="37dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="2dp"
        android:contentDescription="Zurück zum Home Menue"
        app:srcCompat="@drawable/homebutton" />

    <!--hier werden die Aufgaben aufgelistet -->


    <TextView
        android:id="@+id/textViewAufgaben"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Aufgaben"
        android:textSize="25dp"
        android:background="#E6F8D0"
        android:textAlignment="center"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/notizenListView"
        />

    <ListView
        android:id="@+id/aufgabenListView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:backgroundTint="#BF4B4B"
        android:layout_below="@+id/textViewAufgaben"

        />
    <ImageButton
        android:id="@+id/loescheAufgabenView"
        android:contentDescription="loeschen der ergeignisse"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginLeft="365dp"
        android:layout_below="@id/notizenListView"
        android:layout_marginTop="3dp"
        android:backgroundTint="#E6F8D0"
        app:srcCompat="@drawable/baseline_delete_outline_24"
        />



    <!--hier werden die Ereignisse aufgelistet -->
    <TextView
        android:id="@+id/textViewEreignisse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Ereignisse"
        android:textSize="25dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="#DAF8FB"
        android:textAlignment="center"
        android:layout_below="@id/aufgabenListView" />

    <ListView
        android:id="@+id/ereignisseListView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_below="@+id/textViewEreignisse" />
    <ImageButton
        android:id="@+id/ereignisseloescheButton"
        android:contentDescription="loeschen der ergeignisse"
        android:layout_width="40dp"
        android:layout_height="35dp"
        android:layout_marginLeft="365dp"
        android:layout_below="@id/aufgabenListView"
        android:backgroundTint="#DAF8FB"
        android:layout_marginTop="3dp"
        app:srcCompat="@drawable/baseline_delete_outline_24"
        />


    <TextView
        android:id="@+id/TitelAlleListen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Alle Listen"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="26dp" />

    <SearchView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="7dp" />

</RelativeLayout>