<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- Kann später alles in Deatil designed werden, gerne von Gizem HAHAHA -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/homeButton"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="10dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:contentDescription="Zurück zum Home Menue"
            app:srcCompat="@drawable/homebutton" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Aufgabe"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />
    </RelativeLayout>


    <EditText
        android:id="@+id/aufgabenTitel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:background="@drawable/textborder"
        android:hint="  Titel..."
        android:padding="2dp"
        android:paddingStart="10dp"
        android:textSize="19dp" />

        <EditText
            android:id="@+id/TextEingabe"
            android:background="@drawable/aufgabenhintergrund"
            android:layout_width="match_parent"
            android:layout_height="454dp"
            android:layout_margin="15dp"
            android:gravity="top|start"
            android:hint="Schreib etwas ..."
            android:inputType="textMultiLine"
            android:paddingStart="18dp"
            android:paddingTop="15dp"
            android:paddingBottom="170dp"
            android:scrollbarSize="9dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"/>


    <Button
        android:id="@+id/buttonAufgaben"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:backgroundTint="#6A9736"
        android:text="Aufgabe erstellen"
        android:layout_gravity="center"
        android:textColor="@color/white"  />

</LinearLayout>
